# mcp-apple-obsidian

./: .gitignore  AGENTS.md  API.md  API_SPEC.json  CHANGELOG.md  DEPLOYMENT.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: mcp-config.json
src/mcp_apple_obsidian/: __init__.py  applescript.py  config.py  server.py  uri_handler.py  vault_fs.py
tests/: __init__.py  test_applescript.py  test_import.py  test_server_integration.py  test_uri_handler.py  test_vault_fs.py
